--- a/index.html
+++ b/index.html
@@ -445,7 +445,54 @@
      </main> 
     
 <!--FOOTER-->
-    
+<footer class=" container-footer">
+    <div class="container flex">
+        <div>
+       <a href="#" class="logo-link  link-main logo-footer transition"  >Web<span class="studio-footer link-main ">Studio</span> </a>
+   <address class="footer-address">
+       <a class="footer-li text-p transition">г. Киев, пр-т Леси Украинки, 26</a>
+   <ul class="footer-list"> 
+       <li class="footer-li link-m link-main ">
+           <a class="link-main footer-hover transition" href="mailto:info@devstudio.com" >info@devstudio.com</a></li>
+       <li class="footer-li link-t link-main"><a class="link-main footer-hover transition " href="tel:+380961111111" >+38 096 111 11 11</a></li>
+   </ul>    
+   </address>
+</div>
+<div class=" footer-box">
+   <p class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</p>
+   <ul class="social-list marker-none">
+       <li class="social-list-item footer-social ">
+           <a href="" class="social-list-link social-link-footer transition">
+               <svg class="social-list-icon footer-icon">                            
+                   <use href="./img/sprite.svg#icon-instagram"></use>
+               </svg>
+           </a>
+       </li>
+       <li class="social-list-item footer-social">
+           <a href="" class="social-list-link social-link-footer transition">
+               <svg class="social-list-icon footer-icon">
+                 <use href="./img/sprite.svg#icon-twitter-1"></use>
+
+               </svg>
+           </a>
+       </li>
+       <li class="social-list-item footer-social">
+           <a href="" class="link-main social-list-link social-link-footer transition">
+               <svg class="social-list-icon footer-icon">
+                 <use href="./img/sprite.svg#icon-facebook-1"></use>
+
+               </svg>
+           </a>
+       </li>
+       <li class="social-list-item footer-social">
+           <a href="" class="social-list-link social-link-footer transition">
+               <svg class="social-list-icon footer-icon">
+                 <use href="./img/sprite.svg#icon-linkedin-1"></use>
+               </svg>
+           </a>
+       </li>
+   </ul>
+   </div>
         <!--FOOTER FORM-->
          <div class="container-form">
             <h2 class="title-form">Подпишитесь на рассылку</h2>
