--- a/index.html
+++ b/index.html
@@ -163,19 +163,50 @@
     <h2 class="color-title title-post">Чем мы занимаемся</h2>
     <ul class="box-img">
         <li class="main-li list-img">
-             <img  src="./img/img.png" alt="печатает на клавиатуре" width="370" height="294">
+             <picture>
+                <source
+                    srcset="./img/Desktop/webp/img-desktop-1.webp 1x, ./img/Desktop/webp/img-desktop-1@2x.webp 2x"
+                    media="(min-width: 1200px)" type="image/webp">
+                <source
+                    srcset="./img/Desktop/optimision/img-1.png 1x, ./img/Desktop/optimision/img-1@2x.png 2x"
+                    media="(min-width: 1200px)">
+
+                <img class="pic" src="./img/Desktop/optimision/img-1.png"
+                    alt="печатает на клавиатуре">
+            </picture>
              <div class="thumb">
              <p class="label">Десктопные приложения</p>
         </div>
         </li>
         <li class="main-li list-img">
-            <img src="./img/img(1).png" alt="держит телефон в руках" width="370" height="294">
+            <picture>
+                <source
+                    srcset="./img/Desktop/webp/img-desktop-2.webp 1x, ./img/Desktop/webp/img-desktop-2@2x.webp 2x"
+                    media="(min-width: 1200px)" type="image/webp">
+                <source
+                    srcset="./img/Desktop/optimision/img-2.png 1x, ./img/Desktop/optimision/img-2@2x.png 2x"
+                    media="(min-width: 1200px)">
+
+                <img class="pic" src="./img/Desktop/optimision/img-2.png"
+                    alt="держит телефон в руках">
+            </picture>
             <div class="thumb">
             <p class="label">Мобильные приложения</p> 
         </div>
         </li>
         <li class="main-li list-img">
-            <img src="./img/img(2).png" alt="держит планшет в руках" width="370" height="294">
+            <!-- <img src="./img/img(2).png" alt="держит планшет в руках" width="370" height="294"> -->
+            <picture>
+                <source
+                    srcset="./img/Desktop/webp/img-desktop-3.webp 1x, ./img/Desktop/webp/img-desktop-3@2x.webp 2x"
+                    media="(min-width: 1200px)" type="image/webp">
+                <source
+                    srcset="./img/Desktop/optimision/img-3.png 1x, ./img/Desktop/optimision/img-3@2x.png 2x"
+                    media="(min-width: 1200px)">
+
+                <img class="pic" src="./img/Desktop/optimision/img-3.png"
+                    alt="держит планшет в руках">
+            </picture>
             <div class="thumb">
             <p class="label">Дизайнерские решения</p>
         </div>
@@ -254,10 +285,10 @@
               <li class="main-li col">
                <picture>
                 <source
-                    srcset="./img/Desktop/webp/img-dekctop-developer.webp 1x, ./img/Desktop/webp/img-dekctop-developer@2x.webp 2x"
+                    srcset="./img/Desktop/webp/img-desktop-developer.webp 1x, ./img/Desktop/webp/img-desktop-developer@2x.webp 2x"
                     media="(min-width: 1200px)" type="image/webp">
                 <source
-                    srcset="./img/Desktop/optimision/img-dekctop-developer.png 1x, ./img/Desktop/optimision/img-dekctop-developer@2x.png 2x"
+                    srcset="./img/Desktop/optimision/img-desktop-developer.png 1x, ./img/Desktop/optimision/img-desktop-developer@2x.png 2x"
                     media="(min-width: 1200px)">
 
                 <source
@@ -315,12 +346,11 @@
             <li class="main-li col">
                 <picture>
                     <source
-                        srcset="./img/Desktop/webp/img-dekctop-marketolog.webp 1x, ./img/Desktop/webp/img-dekctop-marketolog@2x.webp 2x"
+                        srcset="./img/Desktop/webp/img-desktop-marketolog.webp 1x, ./img/Desktop/webp/img-desktop-marketolog@2x.webp 2x"
                         media="(min-width: 1200px)" type="image/webp">
                     <source
-                        srcset="./img/Desktop/optimision/img-dekctop-marketolog 1x, ./img/Desktop/optimision/img-dekctop-marketolog@2x.png 2x"
+                        srcset="./img/Desktop/optimision/img-desktop-marketolog.png 1x, ./img/Desktop/optimision/img-desktop-marketolog@2x.png 2x"
                         media="(min-width: 1200px)">
-    
                     <source
                         srcset="./img/Tablet/webp/img-tablet-marketolog.webp 1x, ./img/Tablet/webp/img-tablet-marketolog@2x.webp 2x"
                         media="(min-width: 768px)" type="image/webp">
@@ -377,10 +407,10 @@
              <!-- <img src="./img/mihail.jpg" alt="Михаил Ермаков" class="pic" width="270" height="260"> -->
              <picture>
                 <source
-                    srcset="./img/Desktop/webp/img-dekctop-ui-designer.webp 1x, ./img/Desktop/webp/img-dekctop-ui-designer@2x.webp 2x"
+                    srcset="./img/Desktop/webp/img-desktop-ui-designer.webp 1x, ./img/Desktop/webp/img-desktop-ui-designer@2x.webp 2x"
                     media="(min-width: 1200px)" type="image/webp">
                 <source
-                    srcset="./img/Desktop/optimision/img-dekctop-ui-designer 1x, ./img/Desktop/optimision/img-dekctop-ui-designer@2x.png 2x"
+                    srcset="./img/Desktop/optimision/img-desktop-ui-designer.png 1x, ./img/Desktop/optimision/img-desktop-ui-designer@2x.png 2x"
                     media="(min-width: 1200px)">
 
                 <source
