--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -416,7 +416,8 @@
       <!--FOOTER-->
       <footer class=" container-footer">
         <div class="container flex">
-            <div>
+            <div class="wrap">
+            <div class="contacts-box">
            <a href="#" class="logo-link  link-main logo-footer transition"  >Web<span class="studio-footer link-main ">Studio</span> </a>
        <address class="footer-address">
            <a class="footer-li text-p transition">г. Киев, пр-т Леси Украинки, 26</a>
@@ -462,6 +463,7 @@
            </li>
        </ul>
        </div>
+    </div>
        <!--FOOTER FORM-->
        <div class="container-form">
            <h2 class="title-form">Подпишитесь на рассылку</h2>
