--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             </button>
             <ul class="mobile-menu-nav decor">
                 <li class="mobile-menu-nav-item li-studio">
-                    <a href="" class="mobile-menu-nav-link link-studio decor">Студия</a>
+                    <a href="#" class="mobile-menu-nav-link link-studio decor">Студия</a>
                 </li>
                 <li class="mobile-menu-nav-item li-portfolio">
-                    <a href="" class="mobile-menu-nav-link link-portfolio decor">ПОРТФОЛИО</a>
+                    <a href="./portfolio/portfolio.html" class="mobile-menu-nav-link link-portfolio decor">ПОРТФОЛИО</a>
                 </li>
                 <li class="mobile-menu-nav-item li-contacty">
-                    <a href="" class="mobile-menu-nav-link link-contacty decor">Контакты</a>
+                    <a href="#" class="mobile-menu-nav-link link-contacty decor">Контакты</a>
                 </li>
                 <li class="li-tel ">
                     <a href="tel:+380961111111" class="link-tel decor">
