--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -45,7 +45,52 @@
                 </li>
             </ul>
         </div>
-        
+         <!-- MOBILE-MENU -->
+        <div class="mobile-menu" data-menu>
+            <button type="button" class="mobile-close-btn" data-menu-close>
+                <svg class="close-icon">
+                    <use href="../img/sprite.svg#icon-close1"></use>
+                </svg>
+            </button>
+            <ul class="mobile-menu-nav decor">
+                <li class="mobile-menu-nav-item li-studio">
+                    <a href="../index.html" class="mobile-menu-nav-link link-studio decor">Студия</a>
+                </li>
+                <li class="mobile-menu-nav-item li-portfolio">
+                    <a href="#" class="mobile-menu-nav-link link-portfolio decor">ПОРТФОЛИО</a>
+                </li>
+                <li class="mobile-menu-nav-item li-contacty">
+                    <a href="#" class="mobile-menu-nav-link link-contacty decor">Контакты</a>
+                </li>
+                <li class="li-tel ">
+                    <a href="tel:+380961111111" class="link-tel decor">
+                        +38 096 111 11 11
+                    </a>
+                </li>
+                <li class="li-mail ">
+                    <a href="mailto:info@devstudio.com" class="link-mail decor">
+                        info@devstudio.com
+                    </a>
+                </li>
+            </ul>
+            <ul class="menu-social decor ">
+                    <li class="menu-social-item" lang="en">
+                        <a href="" class="menu-social-link decor">Instagram</a>
+                        <span class="vertical-line"></span>
+                    </li>
+                    <li class="menu-social-item" lang="en">
+                        <a href="" class="menu-social-link decor">Twitter</a>
+                        <span class="vertical-line"></span>
+                    </li>
+                    <li class="menu-social-item" lang="en">
+                        <a href="" class="menu-social-link decor">Facebok</a>
+                        <span class="vertical-line"></span>
+                    </li>
+                    <li class="menu-social-item" lang="en">
+                        <a href="" class="menu-social-link decor">LinkedIn</a>
+                    </li>
+                </ul>
+        </div>
       </header>
  <main>
       <section class="section-portfolio">
