--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   <section class="aside">
      <div class="container">
      <h2 class="color-title">Наша команда</h2>
-     <ul class="container-item">
+     <ul class="container-item decor">
             <li class="main-li col">
              <!-- <img src="./img/igor.jpg" alt="Игорь Демьяненко" class="pic" width="270" height="260"> -->
              <picture>
