--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="header-nav">
             <a href="#" class="logo-link  link-main transition"  >Web<span class="studio link-main ">Studio</span> </a>
                 <ul class="list">
-                <li class="header-li item"><a href="#" class="nav-ul link-main container-studia current nav-link ">Студия</a></li>
+                <li class="header-li item " ><a href="#" class="nav-ul link-main container-studia current nav-link active">Студия</a></li>
                 <li class="header-li item"><a href="./portfolio/portfolio.html" class="nav-ul link-main container-portfolio nav-link">Портфолио</a></li>
                 <li class="header-li item"><a href="#" class="nav-ul link-main container-kontakty transition nav-link">Контакты</a></li>
             </ul>
@@ -53,21 +53,24 @@
             </button>
             <ul class="mobile-menu-nav decor">
                 <li class="mobile-menu-nav-item li-studio">
-                    <a href="#" class="mobile-menu-nav-link link-studio decor">Студия</a>
+                    <a href="#" class="mobile-menu-nav-link link-studio decor size-menu">Студия</a>
                 </li>
                 <li class="mobile-menu-nav-item li-portfolio">
-                    <a href="./portfolio/portfolio.html" class="mobile-menu-nav-link link-portfolio decor">ПОРТФОЛИО</a>
+                    <a href="./portfolio/portfolio.html" class="mobile-menu-nav-link link-portfolio decor size-menu">ПОРТФОЛИО</a>
                 </li>
                 <li class="mobile-menu-nav-item li-contacty">
-                    <a href="#" class="mobile-menu-nav-link link-contacty decor">Контакты</a>
+                    <a href="#" class="mobile-menu-nav-link link-contacty decor size-menu">Контакты</a>
                 </li>
+            </ul>
+            
+            <ul class="list-contakt-menu decor">
                 <li class="li-tel ">
-                    <a href="tel:+380961111111" class="link-tel decor">
+                    <a href="tel:+380961111111" class="link-tel decor size-menu-contakt">
                         +38 096 111 11 11
                     </a>
                 </li>
                 <li class="li-mail ">
-                    <a href="mailto:info@devstudio.com" class="link-mail decor">
+                    <a href="mailto:info@devstudio.com" class="link-mail decor size-menu-contakt">
                         info@devstudio.com
                     </a>
                 </li>
