--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -54,21 +54,23 @@
             </button>
             <ul class="mobile-menu-nav decor">
                 <li class="mobile-menu-nav-item li-studio">
-                    <a href="../index.html" class="mobile-menu-nav-link link-studio decor">Студия</a>
+                    <a href="../index.html" class="mobile-menu-nav-link link-studio decor size-menu">Студия</a>
                 </li>
                 <li class="mobile-menu-nav-item li-portfolio">
-                    <a href="#" class="mobile-menu-nav-link link-portfolio decor">ПОРТФОЛИО</a>
+                    <a href="#" class="mobile-menu-nav-link link-portfolio decor size-menu">Портфоліо</a>
                 </li>
                 <li class="mobile-menu-nav-item li-contacty">
-                    <a href="#" class="mobile-menu-nav-link link-contacty decor">Контакты</a>
+                    <a href="#" class="mobile-menu-nav-link link-contacty decor size-menu">Контакты</a>
                 </li>
+            </ul>
+                <ul class="list-contakt-menu decor">
                 <li class="li-tel ">
-                    <a href="tel:+380961111111" class="link-tel decor">
+                    <a href="tel:+380961111111" class="link-tel decor size-menu-contakt">
                         +38 096 111 11 11
                     </a>
                 </li>
                 <li class="li-mail ">
-                    <a href="mailto:info@devstudio.com" class="link-mail decor">
+                    <a href="mailto:info@devstudio.com" class="link-mail decor size-menu-contakt">
                         info@devstudio.com
                     </a>
                 </li>
@@ -100,17 +102,17 @@
               <li class="main-li">
                       <button type="button" class="filtry current btn ">Все</button>
                 </li>
-              <li class="main-li"> 
+              <li class="main-li list-btn-portfolio"> 
                       <button type="button" class="filtry button-web ">Веб-сайты</button>
                  </li>
-              <li class="main-li">
+              <li class="main-li list-btn-portfolio">
 
                         <button type="button" class="filtry button-aplication ">Приложения</button> 
                   </li>
-              <li class="main-li"> 
+              <li class="main-li list-btn-portfolio"> 
                         <button type="button" class="filtry button-dyzajn ">Дизайн</button> 
              </li>
-              <li class="main-li"> 
+              <li class="main-li list-btn-portfolio"> 
                       <button type="button" class="filtry button-mar ">Маркетинг</button>
                     </li>
           </ul>
