--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="container">
             <h2 class="visually-hidden">скрытый заголовок</h2>   <!-- скрытый заголовок -->
             <ul class="list-features-svg marker-none">
-                <li class="list-features">
+                <li class="list-features antena">
                     <div class="features-icon">
                     <svg class="icon">
                         <use href="./img/sprite.svg#icon-antenna-1"></use>
@@ -118,7 +118,7 @@
                     
                 </div>
                 </li>
-                <li class="list-features">
+                <li class="list-features clock">
                     <div class="features-icon">
                     <svg class="icon">
                         <use href="./img/sprite.svg#icon-clock-1"></use>
@@ -129,7 +129,7 @@
                         <p class="text-p">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </div>
                 </li>
-                <li class="list-features">
+                <li class="list-features diagrama">
                    <div class="features-icon">
                     <svg class="icon">
                         <use href="./img/sprite.svg#icon-diagram-1"></use>
@@ -142,7 +142,7 @@
                     
                   </div>
                 </li>
-                <li class="list-features">
+                <li class="list-features astronaut">
                    <div class="features-icon">
                     <svg class="icon">
                         <use href="./img/sprite.svg#icon-astronaut-1"></use>
